Fix misaligned main content

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -35,6 +35,7 @@ html {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 main {
